--- a/slac_Frontend/Bed Allocation.html
+++ b/slac_Frontend/Bed Allocation.html
@@ -27,7 +27,7 @@
                 <a href="Surgery%20Status.html" target="_blank">Surgery Status</a>
             </li>
             <li>
-                <a href="Bed%20Allocation.html" target="_self">Bed allocation</a>
+                <a href="#" target="_self" style="background-color: darkgray">Bed allocation</a>
             </li>
             <li>
                 <a href="Blood%20Bank.html" target="_blank">Blood Bank</a>
