--- a/slac_Frontend/Blood Bank.html
+++ b/slac_Frontend/Blood Bank.html
@@ -29,7 +29,7 @@
                 <a href="Bed%20Allocation.html" target="_blank">Bed allocation</a>
             </li>
             <li>
-                <a href="Blood%20Bank.html" target="_self">Blood Bank</a>
+                <a href="#" target="_self" style="background-color: darkgray">Blood Bank</a>
             </li>
             <li>
                 <a href="generalPatients.html" target="_blank">OPD</a>
