--- a/slac_Frontend/Patient Full Info.html
+++ b/slac_Frontend/Patient Full Info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Patient Full information</title>
+    <title>Emergency Patients Information</title>
     <link rel="stylesheet" href="Style1.css">
 </head>
 <body >
@@ -15,17 +15,45 @@
     </h1>
 </header>
 <header>
-    <br>
-    <h1 style="text-align: center">
+    <hr>
+    <h2 style="text-align: center">
         <strong>
             Patient Full Info
         </strong>
-    </h1>
-    <br>
-    <br>
-    <div>
-
-    </div>
+    </h2>
+    <hr>
+    <hr>
+    <form>
+        <label for="fname">Paramedic name:</label><br>
+        <br>
+        <input type="text" id="fname" name="fname"><br>
+        <br>
+        <label for="lname">Patient ID:</label><br>
+        <br>
+        <input type="text" id="lname" name="lname"><br>
+        <br>
+        <label for="f1">Patient Age:</label><br>
+        <br>
+        <input type="number" id="f1" name="fname"><br>
+        <br>
+        <label for="f2">Patient Gender:</label><br>
+        <br>
+        <input type="text" id="f2" name="lname"><br>
+        <br>
+        <label for="f3">Condition:</label><br>
+        <br>
+        <input type="text" id="f3" name="fname"><br>
+        <br>
+        <label for="f4">Accident Category:</label><br>
+        <br>
+        <input type="text" id="f4" name="lname"><br>
+        <br>
+        <label for="f5">Patient description:</label><br>
+        <br>
+        <textarea
+                id="f5" name="locl" rows="4" cols="50">
+        </textarea>
+    </form>
 </header>
 
 </body>
