--- a/slac_Frontend/Patient info.html
+++ b/slac_Frontend/Patient info.html
@@ -20,7 +20,7 @@
     <nav class="nav main-nav" style="text-align: right">
         <ul>
             <li>
-                <a href="Patient%20info.html" target="_self">Patient Information</a>
+                <a href="#" target="_self" style="background-color:darkgray">Patient Information</a>
             </li>
             <li>
                <a href="Surgery%20Status.html" target="_blank">Surgery Status</a>
@@ -38,7 +38,7 @@
     </nav>
 
     <hr>
-    <h3><strong>PATIENT INFORMATION</strong></h3>
+    <h3><strong>EMERGENCY PATIENT INFORMATION</strong></h3>
     <hr>
     <hr>
     <table class="table">
@@ -48,7 +48,7 @@
             <th scope="col">Patient ID</th>
             <th scope="col">Patient Age</th>
             <th scope="col">Patient Gender</th>
-            <th scope="col">Condition</th>
+            <th scope="col">Conscious(Yes or No)</th>
             <th scope="col">Accident Category</th>
             <th scope="col">Blood loss</th>
             <th scope="col">Patient description</th>
@@ -78,7 +78,7 @@
             </th>
             <th>
                 <button type="button" class="button" >
-                    <a href="Patient%20Full%20Info.html" target="_blank">Allocate </a>
+                    <a href="Surgery%20Status.html" target="_blank">Allocate </a>
                 </button>
             </th>
         </tr>
