--- a/slac_Frontend/Surgery Status.html
+++ b/slac_Frontend/Surgery Status.html
@@ -23,7 +23,7 @@
                 <a href="Patient%20info.html" target="_blank">Patient Information</a>
             </li>
             <li>
-                <a href="Surgery%20Status.html" target="_self">Surgery Status</a>
+                <a href="#" target="_self" style="background-color: darkgray">Surgery Status</a>
             </li>
             <li>
                 <a href="Bed%20Allocation.html" target="_blank">Bed allocation</a>
@@ -37,7 +37,7 @@
         </ul>
     </nav>
     <hr>
-    <h3><strong>SURGERY STATUS</strong></h3>
+    <h3><strong>EMERGENCY SURGERY STATUS</strong></h3>
     <hr>
     <hr>
     <br>
