--- a/slac_Frontend/generalPatients.html
+++ b/slac_Frontend/generalPatients.html
@@ -32,13 +32,13 @@
                 <a href="Blood%20Bank.html" target="_blank">Blood Bank</a>
             </li>
             <li>
-                <a href="generalPatients.html" target="_self">OPD</a>
+                <a href="#" target="_self" style="background-color: darkgray">OPD</a>
             </li>
         </ul>
     </nav>
 
     <hr>
-    <h3><strong>PATIENT INFORMATION</strong></h3>
+    <h3><strong>GENERAL PATIENT INFORMATION(OPD)</strong></h3>
     <hr>
     <hr>
     <table class="table">
@@ -46,8 +46,6 @@
         <tr>
             <th scope="col">Patient Name</th>
             <th scope="col">Patient Contact</th>
-            <th scope="col">Patient Age</th>
-            <th scope="col">Patient Gender</th>
             <th scope="col">Queue Number</th>
             <th scope="col">Queue Status</th>
             <th scope="col">Send Alert
@@ -61,18 +59,17 @@
             <tr>
                 <th>Trump</th>
                 <th>69966999</th>
-                <th>70</th>
-                <th>Unknown</th>
                 <th>214</th>
                 <th>
-                    <select id="status" name="Status">
-                        <option >None</option>
-                        <option >Approaching</option>
-                        <option >Passed</option>
-                    </select>
+                   
                 </th>
                   <th>
                       <input type="submit" value="Send alert">
+                </th>
+                <th>
+                    <button type="button">
+                        Check-in
+                    </button>
                 </th>
             </tr>
         </form>
