--- a/slac_Frontend/generalPatients.html
+++ b/slac_Frontend/generalPatients.html
@@ -5,6 +5,7 @@
     <title>Out Patient Department</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link rel="stylesheet" href="Style1.css">
 </head>
 <body>
@@ -41,6 +42,24 @@
     <h3><strong>GENERAL PATIENT INFORMATION(OPD)</strong></h3>
     <hr>
     <hr>
+    <form class="form-inline" >
+        <div class="form-group">
+            <label for="name" style="padding: 5px 5px">Patient Name:</label>
+            <input type="email" class="form-control" id="name">
+        </div>
+        <div class="form-group">
+            <label for="cntct" style="padding: 5px 5px">Contact:</label>
+            <input type="number" class="form-control" id="cntct">
+        </div>
+        <div class="form-group">
+            <label for="qNo" style="padding: 5px 5px;">Queue number:</label>
+            <input type="number" class="form-control" id="qNo">
+        </div>
+        <button type="submit" class="btn btn-default"
+                style="margin-left: 50px">Enter</button>
+    </form>
+    <hr>
+    <hr>
     <table class="table">
         <thead class="thead-light">
         <tr>
@@ -61,7 +80,11 @@
                 <th>69966999</th>
                 <th>214</th>
                 <th>
-                   
+                    <input type="checkbox" id="switch"
+                           class="checkbox" />
+                    <label for="switch" class="toggle">
+                        <p>    </p>
+                    </label>
                 </th>
                   <th>
                       <input type="submit" value="Send alert">
