--- a/slac_Frontend/generalPatients.html
+++ b/slac_Frontend/generalPatients.html
@@ -73,8 +73,8 @@
         </tr>
         </thead>
         <tr>
-            <th>Trump</th>
-            <th>69966999</th>
+            <th>Raju</th>
+            <th>948592011</th>
             <th>214</th>
             <th>
                 <input type="checkbox" id="switch"
